get coefficients for best fit line

--- a/supervised learning-linear regression.ipynb
+++ b/supervised learning-linear regression.ipynb
@@ -552,6 +552,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up X as median room values\n",
+    "X = boston_df.RM\n",
+    "\n",
+    "# Use v to make X two-dimensional\n",
+    "X = np.vstack(boston_df.RM)\n",
+    "\n",
+    "# Set up Y as the target price of the houses.\n",
+    "Y = boston_df.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.array( [ [value,1] for value in X ] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#get coefficient for best fit line\n",
+    "m, b = np.linalg.lstsq(X, Y)[0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
