set up train and test data for linear regression

--- a/supervised learning-linear regression.ipynb
+++ b/supervised learning-linear regression.ipynb
@@ -661,10 +661,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sklearn\n",
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Lreg=LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set up \n",
+    "X_multi=boston_df.drop('price',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Y_target=boston_df.price"
+   ]
   }
  ],
  "metadata": {
