--- a/supervised learning-linear regression.ipynb
+++ b/supervised learning-linear regression.ipynb
@@ -671,21 +671,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lreg=LinearRegression()"
+    "lreg=LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set up \n",
+    "#set up train data\n",
     "X_multi=boston_df.drop('price',1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#set up test data\n",
+    "Y_target=boston_df.price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lreg.fit(X_multi,Y_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "estimated intercept coefficient is 36.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('estimated intercept coefficient is %.2f'%lreg.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of coefficients used was 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('number of coefficients used was %d'%len(lreg.coef_))"
    ]
   },
   {
@@ -693,9 +757,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Y_target=boston_df.price"
-   ]
+   "source": []
   }
  ],
  "metadata": {
