validation for train and test dataset

--- a/supervised learning-linear regression.ipynb
+++ b/supervised learning-linear regression.ipynb
@@ -943,12 +943,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((379, 2), (127, 2), (379,), (127,))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape,x_test.shape,y_train.shape,y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(x_train.shape,x_test.shape,y_train)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
