use training set for prediction

--- a/supervised learning-linear regression.ipynb
+++ b/supervised learning-linear regression.ipynb
@@ -963,7 +963,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#use training set for prediction\n",
+    "lreg=LinearRegression()\n"
+   ]
   }
  ],
  "metadata": {
