fit logistic regression model and check accuracy

--- a/supervised learning-logistic regression.ipynb
+++ b/supervised learning-logistic regression.ipynb
@@ -1093,6 +1093,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3224945020420987"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#check percentage of women had_affair\n",
+    "y.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#if guess had_affair, accuracy: 1-0.32=0.68\n",
+    "#log_model is little better than guess"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
