remove punctuation for message

--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -553,6 +553,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "mess='Sample message! Notice: it has punctuation.'\n",
+    "nopunc=[char for char in mess if char not in string.punctuation]\n",
+    "#join char to form string after removing punc\n",
+    "nopunc=''.join(nopunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sample message Notice it has punctuation'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nopunc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
