--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -665,6 +665,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def text_process(mess):\n",
+    "    #remove punctuation\n",
+    "    nopunc=[char for char in mess if char not in string.punctuation]\n",
+    "    nopunc=''.join(nopunc)\n",
+    "    \n",
+    "    #remove stopwords\n",
+    "    return [word for word in nopunc.split() if word.lower() not in stopwords.words('english')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [Go, jurong, point, crazy, Available, bugis, n...\n",
+       "1                       [Ok, lar, Joking, wif, u, oni]\n",
+       "2    [Free, entry, 2, wkly, comp, win, FA, Cup, fin...\n",
+       "3        [U, dun, say, early, hor, U, c, already, say]\n",
+       "4    [Nah, dont, think, goes, usf, lives, around, t...\n",
+       "Name: message, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tokenize original text\n",
+    "messages['message'].head(5).apply(text_process)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
