calculated term frequency

--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -706,6 +706,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert token into vector that sklearn algorithm can use\n",
+    "#bag_of_words method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  import sys\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11425"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bow_transformer=CountVectorizer(analyzer=text_process).fit(messages['message'])\n",
+    "len(bow_transformer.vocabulary_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U dun say so early hor... U c already then say...\n"
+     ]
+    }
+   ],
+   "source": [
+    "message4=messages['message'][3]\n",
+    "print message4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4068)\t2\n",
+      "  (0, 4629)\t1\n",
+      "  (0, 5261)\t1\n",
+      "  (0, 6204)\t1\n",
+      "  (0, 6222)\t1\n",
+      "  (0, 7186)\t1\n",
+      "  (0, 9554)\t2\n",
+      "(1, 11425)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check its vector representation\n",
+    "bow4=bow_transformer.transform([message4])\n",
+    "print bow4\n",
+    "print bow4.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#total 7 words for message4 after cleaning, 2 of them appear twice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "U\n",
+      "say\n"
+     ]
+    }
+   ],
+   "source": [
+    "print bow_transformer.get_feature_names()[4068]\n",
+    "print bow_transformer.get_feature_names()[9554]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  import sys\n"
+     ]
+    }
+   ],
+   "source": [
+    "#transform for entire messages\n",
+    "messages_bow=bow_transformer.transform(messages['message'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of sparse matrix: (5572, 11425)\n",
+      "amount of non-zero occurences: 50548\n",
+      "sparsity: 0.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'shape of sparse matrix:',messages_bow.shape\n",
+    "print 'amount of non-zero occurences:',messages_bow.nnz\n",
+    "print 'sparsity: %.2f%%'%(100.0*messages_bow.nnz/(messages_bow.shape[0]*messages_bow.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
