TF-IDF transformation

--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -841,6 +841,7 @@
    ],
    "source": [
     "#transform for entire messages\n",
+    "#term frequency\n",
     "messages_bow=bow_transformer.transform(messages['message'])"
    ]
   },
@@ -863,6 +864,99 @@
     "print 'shape of sparse matrix:',messages_bow.shape\n",
     "print 'amount of non-zero occurences:',messages_bow.nnz\n",
     "print 'sparsity: %.2f%%'%(100.0*messages_bow.nnz/(messages_bow.shape[0]*messages_bow.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TF-IDF\n",
+    "#term frequency-inverse document frequency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TF(t):nmber of times t appear in text/total number of words in text\n",
+    "#IDF(t):log(total number of texts/number of text with t in it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 9554)\t0.5385626262927564\n",
+      "  (0, 7186)\t0.4389365653379857\n",
+      "  (0, 6222)\t0.3187216892949149\n",
+      "  (0, 6204)\t0.29953799723697416\n",
+      "  (0, 5261)\t0.29729957405868723\n",
+      "  (0, 4629)\t0.26619801906087187\n",
+      "  (0, 4068)\t0.40832589933384067\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "tfidf_transformer=TfidfTransformer().fit(messages_bow)\n",
+    "tfidf4=tfidf_transformer.transform(bow4)\n",
+    "print tfidf4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.2800524267409408\n",
+      "8.527076498901426\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check for two specific words\n",
+    "print tfidf_transformer.idf_[bow_transformer.vocabulary_['u']]\n",
+    "print tfidf_transformer.idf_[bow_transformer.vocabulary_['university']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#transform entire\n",
+    "messages_tfidf=tfidf_transformer.transform(messages_bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5572, 11425)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print messages_tfidf.shape"
    ]
   },
   {
