train spam detect model

--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -961,6 +961,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#train spam/ham classifier using naive bayes algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "spam_detect_model=MultinomialNB().fit(messages_tfidf,messages['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predicted: ham\n",
+      "expected: ham\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'predicted:',spam_detect_model.predict(tfidf4)[0]\n",
+    "print 'expected:',messages.label[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
