--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -1072,6 +1072,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#create data pipeline(model API)\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "pipeline=Pipeline([\n",
+    "    ('bow',CountVectorizer(analyzer=text_process)),#count term frequency\n",
+    "    ('tfidf',TfidfTransformer()),#weighted TF-IDF score\n",
+    "    ('classifier',MultinomialNB()),#train on TF-IDF vectors with Naive Bayes classifier\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
