calculate test accuracy

--- a/natural language processing.ipynb
+++ b/natural language processing.ipynb
@@ -1087,6 +1087,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  import sys\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "     steps=[('bow', CountVectorizer(analyzer=<function text_process at 0x1a362f8c08>,\n",
+       "        binary=False, decode_error=u'strict', dtype=<type 'numpy.int64'>,\n",
+       "        encoding=u'utf-8', input=u'content', lowercase=True, max_df=1.0,\n",
+       "        max_features=None, min_df=1, ngram_range=(1, 1), preprocessor=No...         use_idf=True)), ('classifier', MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(msg_train,label_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:7: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
+      "  import sys\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions=pipeline.predict(msg_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "        ham       1.00      0.96      0.98       997\n",
+      "       spam       0.74      1.00      0.85       118\n",
+      "\n",
+      "avg / total       0.97      0.96      0.97      1115\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print classification_report(predictions,label_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
